<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title="@string/charger_settings_title">

    <com.android.settingslib.widget.LayoutPreference
        android:key="battery_care_preview"
        android:layout="@layout/battery_care_view"
        android:selectable="false" />

    <com.android.settingslib.widget.MainSwitchPreference
        android:defaultValue="false"
        android:key="charger_main_enable"
        android:title="@string/charger_bc_enable" />

    <SwitchPreference
        android:key="device_charging_enable"
        android:title="@string/charger_hs_enable"
        android:summary="@string/charger_hs_summary"
        android:persistent="false"
        android:dependency="charger_main_enable" />

    <com.xperia.settings.charger.widgets.CustomSeekBarPreference
        android:key="device_charging_control"
        android:title="@string/charger_bc_limit"
        android:defaultValue="@integer/charging_control_default"
        android:max="@integer/charging_control_max"
        android:min="@integer/charging_control_min"
        android:dependency="charger_main_enable"
        app:showSeekBarValue="true"
        app:defaultValueText="Charge to 100%" />

    <com.android.settingslib.widget.FooterPreference
        android:key="charger_settings_footer"
        android:title="@string/charger_settings_footer"
        android:selectable="false" />

</PreferenceScreen>